tests/snapshots/run_wpt_conformance__coreml_cast_uint32_4D_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cast.https.any.js cast uint32 4D tensor to int32, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, tensor<bool, tensor<fp16, tensor<fp32, tensor<int16, tensor<int32, tensor<int8, tensor<uint16, tensor<uint8 }; got tensor<uint32, [2, 2, 2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    castInput: u32[2, 2, 2, 3];
  }

  nodes {
    [castOutput] = cast(castInput, label="");
  }

  outputs { castOutput; }
}
